--- a/test.html
+++ b/test.html
@@ -16,9 +16,18 @@
             호이스팅 (Hoisting)
             var, let, const 
         */
-        // object, array, string, number, boolean
+        /*  [기본 타입]
+            object, array, string, number, boolean
+            1. object  : 객체 / non-primitive 타입
+                            원시값을 제외한 모든 JavaScript값은 객체다.
+                            (원시값 : String, number, boolean, null, undefined)
+            2. array   : 배열 
+            3. string  : 문자열 / 큰 따옴표(""), 작은 따옴표('') 사용
+            4. number  : 숫자
+            5. boolean : true/false 값
+        */
         var number = 'Hello World!';
-        // 파란 단어 : 예약어(이미 결정된 언어) :상수를 만들 때 쓰는 명령어
+        // 파란 단어 : 예약어(이미 결정된 언어) : 상수를 만들 때 쓰는 명령어
         // 값을 저장하기 위해 상수를 만든다.
         // 상수와 변수의 차이 : 상수는 변경X / 변수는 변경 가능
 
@@ -32,7 +41,7 @@
         // var를 입력했기 때문에 중간에 number를 변경해도 아랫줄부터 적용된다.
 
         console.log(number);
-        // 문자열 () = method or fuction
+        // 문자열 () = 메소드(method) or 함수(function)
         
         console.log(number * number);  // 곱하기
 
