--- a/ch04/exam04-05 copy.html
+++ b/ch04/exam04-05 copy.html
@@ -7,6 +7,18 @@
     <title>exam04-05-copy</title>
     <!-- 호이스팅 -->
     <!-- exam04-05를 하게 되면 exam04-05-copy처럼 변화해서 실행된다. -->
+
+    <!-- 호이스팅(Hoisting)이란?
+            함수 안에 선언들을 모두 끌어올려서 해당 함수 유효 범위의 최상단에 선언하는 것
+            1. 실제로 코드가 끌어올려지는 건 아니며, 내부적으로 끌어올려 처리함
+            2. 실제 메모리에서는 변화가 없다.
+    -->
+
+    <!-- 호이스팅의 대상
+        1. 'var 변수 선언'과 '함수선언문'에서만 [Hoisting]이 일어난다.
+            • var변수/함수의 선언만 위로 끌어 올려지며, 할당은 끌어 올려지지 않는다.
+            • 'let/const 변수 선언'과 '함수표현식'에서는 [Hoisting] 발생 X
+    -->
 </head>
 <body>
     <h1>exam04-05-copy.html</h1>
