--- a/print.html
+++ b/print.html
@@ -11,21 +11,26 @@
     <script>
         const a = '기본'
         console.log(a);
-
         /* 
             • 매개변수로 전달된 값을 출력한다.
             • 요소를 HTML과 같은 트리 구조로 출력한다.
         */
+
         console.warn('경고 메세지');
+        
         console.error('에러입니다.');
+        
         console.dir('abc');
         /* 
             • 매개변수로 전달된 객체의 속성을 출력한다.
             • 요소를 JSON과 같은 트리 구조로 출력한다.
         */
+
         console.info('정보 메세지');
-        // 본체.기능
-        alert('알림창 좀 그만 떠라...'); // 알림창
+        // 본체.기능 - log와 별 차이 없다 (강사fficial)
+
+        alert('알림창 좀 그만 떠라...'); // 알림창 - 브라우저에만 있다. (node.js엔 없다.)
+
         document.write('안녕하세요.');
     </script>
 </body>
