--- a/test.html
+++ b/test.html
@@ -26,17 +26,22 @@
             4. number  : 숫자
             5. boolean : true/false 값
         */
-        var number = 'Hello World!';
-        // 파란 단어 : 예약어(이미 결정된 언어) : 상수를 만들 때 쓰는 명령어
-        // 값을 저장하기 위해 상수를 만든다.
-        // 상수와 변수의 차이 : 상수는 변경X / 변수는 변경 가능
-
-        console.log(number);
-        // const (number) : 상수 / 절대 변하지 않음
+        var number = 'Hello World!'; 
+        // var number // 변수 선언
         /*   =  : 
                     오른쪽에 있는 값을 왼쪽에 복사해서 넣는다. 오른쪽 값는 소멸
                     왼쪽에 무조건 상수 or 변수
         */
+        // 파란 단어 : 예약어(이미 결정된 언어) : 상수를 만들 때 쓰는 명령어
+        // 값을 저장하기 위해 상수를 만든다.
+
+        /* [상수와 변수의 차이] : 
+                                1. 상수는 변경 불가  
+                                2. 변수는 변경 가능 
+        */
+
+        console.log(number);
+        // const (number) : 상수 / 절대 변하지 않음
         number = '안녕하세요'
         // var를 입력했기 때문에 중간에 number를 변경해도 아랫줄부터 적용된다.
 
@@ -51,18 +56,18 @@
                                 상따옴표를 사용할 때는 홈따옴표를 감싸고 싶을 때
         */
 
-        number = 20;  // (숫자형)
+        number = 55;  // (숫자형)
         console.log(number * 123);
         // (리터럴) 값 그 자체인 값
 
         var number2 = '10';
         console.log(number2 * number);
         // 관리자 메뉴에 가면 number=21, '21'이 숫자형, 문자열임을 알 수 있다.
-        /* 문자형인데 곱하기가 적용됐다?
+        /* 문자형인데 곱하기가 적용됐다? [자동형변환]
                                 곱하기 때문에 (숫자만 있는)문자를 숫자로 억지로 변환했다    
                                 = 비추천
         */
-
+        
         const abc = 'aespa';
         console.log(abc);
     </script>
