--- a/var_naming.html
+++ b/var_naming.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>var-naming</title>
+    <!-- 식별자를 만들 때 주의사항 -->
 </head>
 <body>
     <h1>var-naming.html</h1>
@@ -14,7 +15,7 @@
         // 3. 빈칸이 중간에 들어가면 안 됨.
         // 4. 예약어 사용 불가.
         
-        // (권장) 5. 변수명, 함수명은 소문자로 시작 (카멜 케이스 기법)
+        // (권장) 5. 변수명, 함수(메소드)명은 소문자로 시작 (카멜 케이스 기법)
         // (권장) 6. 상수는 모두 대문자로 작성한다
 
         const MATH = 10;
@@ -27,7 +28,7 @@
 
         // e.g. Student Happy Today
         // 1. studentHappyToday (시작은 소문자, 단어 붙일 때마다 대문자로 구분)
-        // 2. StudentHappyToday
+        // 2. StudentHappyToday (class명을 붙일 때 사용한다.)
         // 3. student_happy_day
         // 4. student-happy-day
     </script>
