--- a/ch07/ex07-01.html
+++ b/ch07/ex07-01.html
@@ -24,11 +24,11 @@
         var x = 1;
         // x++; // x = x + 1
              // (++) : 증감식
-        console.log(`x = ${x++}`);
-        console.log(`x = ${x}`);
+        console.log(`x = ${x++}`); // 읽기도 하고 쓰기도 해야한다. (읽기 먼저)
+        console.log(`x = ${x}`);   // 읽기만 한다.
 
         var y = 1;
-        console.log(`y = ${++y}`);
+        console.log(`y = ${++y}`); // 읽기도 하고 쓰기도 해야한다. (쓰기 즉,증가 먼저)
         console.log(`y = ${y}`);
 
         var k1 = +10;
