--- a/ch07/ex07-03-operator.html
+++ b/ch07/ex07-03-operator.html
@@ -9,11 +9,12 @@
 <body>
     <h1>ex07-03-operator</h1>
     <script>
-        var num = 13;
-        console.log(num % 2 === 0 ? '짝수' : '홀수');
+        var num = 1350;
+        console.log(num % 2 === 0 ? '짝수입니다.' : '홀수입니다.');
 
         // 식 ? true일 때 : false일 때
         // ①    ②          ③
+        // (분기문)이라고 한다.
     </script>
 </body>
 </html>
