--- a/ch07/ex07-02-assignment.html
+++ b/ch07/ex07-02-assignment.html
@@ -10,14 +10,14 @@
 <body>
     <h1>ex07-02-assignment.html</h1>
     <script>
-        var x;
-        x = 10; 
+        var x;  // 변수 선언
+        x = 10; // 초기화
         console.log(x);  // 10
 
         x = x + 5;
         console.log(x);  // 15
 
-        x += 5;
+        x += 5; // ↑ 17line과 같은 연산공식
         console.log(x);  // 20
 
         x -= 2;
@@ -34,11 +34,12 @@
         x *= 0.5;
         console.log(x); 
 
-        //================================================================
+        //=============================================
         var x1;
 
         // 할당문은 표현식인 문이다.
-        console.log(x1 = 100);  // 100
+        console.log(x1 = 100);  // 100 
+        // (비추)귀찮더라도 변수선언, 초기화, 출력 순으로 입력해주세요.
 
 
         // 연쇄할당
