--- a/ch08/for-mission1.html
+++ b/ch08/for-mission1.html
@@ -11,8 +11,15 @@
     <script>
 
 
-        for(var i=50 ; i<122 ; i++) {
-            console.log(i);
+        // for(var i=50 ; i<122 ; i++) {
+        //     console.log(i);
+        // }
+        
+        console.log('----');
+        
+        // i=67은 건들지않고 위와 같은 식 만들기
+        for(var i=67 ; i<139 ; i++) { // 122 + 17;
+            console.log(i - 17);
         }
 
     </script>
